--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
     "build": "prisma generate && tsc",
-    "vercel-build": "prisma generate && tsc",
+    "vercel-build": "prisma generate && tsc && cp -r src dist/",
     "clean": "rm -rf dist",
     "test:websocket": "node test-websocket.js",
     "db:generate": "prisma generate",
